# northernlights-cli

./: CMakeLists.txt  README.md  command.hpp  main.cpp  prompt.hpp  utils.cpp  utils.hpp
include/: command.hpp  db.hpp  program.hpp  prompt.hpp  system.hpp  trigger.hpp  user.hpp  utils.hpp
include/lib/rapidjson/: license.txt
src/: command.cpp  db.cpp  main.cpp  program.cpp  prompt.cpp  system.cpp  trigger.cpp  user.cpp  utils.cpp
